fix some layout problems

--- a/client/src/components/List/CourseList.css
+++ b/client/src/components/List/CourseList.css
@@ -1,5 +1,6 @@
 .course__details{
     display: flex;
+    flex-wrap: wrap;
     gap: 24px;
 }
 .details__row{
