--- a/client/src/components/Modal/Modal.css
+++ b/client/src/components/Modal/Modal.css
@@ -60,13 +60,21 @@
   .modal__left-container, .modal__image-container, .modal__info{
     flex: initial;
   }
+  .modal__left-container{
+  border-radius:0px;
+  gap: 24px;
+
+  }
   .modal__image-container {
     background-color: var(--base-200);
-    border-top-right-radius: 0;
-    border-top-left-radius: 0;
+    /* border-top-right-radius: 0;
+    border-top-left-radius: 0; */
+    border-radius: 0;
   }
   .modal__image {
     width: 100%;
+    border-radius: 0;
+
   }
   .modal__info {
     box-sizing: border-box;
